fixed z-index for the modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@
   position: sticky;
   top:0px;
   background-color: white;
-  z-index: 10;
+  z-index: 5;
 }
 .page__title{
   font-size: 1.3rem;
