--- a/src/components/components/ModalContainer/ModalContainer.scss
+++ b/src/components/components/ModalContainer/ModalContainer.scss
@@ -20,6 +20,7 @@
     right: 0;
     bottom: 0;
     background-color: rgba(gray, 0.5);
+    z-index: 10;
 }
 
 .modal__header{
